# AIE5

./: .gitattributes  .gitignore  AI_Makerspace_Unsloth_GRPO_Training.ipynb  Dockerfile  Evaluating_Agents_with_Ragas_(2025)_AI_Makerspace.ipynb  Evaluating_RAG_with_Ragas_(2025)_AI_Makerspace.ipynb  Fine_tuning_Embedding_Models_for_RAG_Solution_Notebook.ipynb  Open_Source_RAG_Leveraging_Hugging_Face_Endpoints_through_LangChain.ipynb  Prototyping_LangChain_Application_with_Production_Minded_Changes_Assignment.ipynb  README.md  app.py  ~$_assignment_1.docx
02_Embeddings_and_RAG/: Pythonic_RAG_Assignment.ipynb  homework2.py  pyproject.toml  rag_with_metadata.py
02_Embeddings_and_RAG/aimakerspace/: text_utils.py  vectordatabase.py
04_Production_RAG/: Assignment_Introduction_to_LCEL_and_LangGraph_LangChain_Powered_RAG.ipynb  LangSmith_and_Evaluation.ipynb  test.py
05_Our_First_Agent_with_LangGraph/: Introduction_to_LangGraph_for_Agents_Assignment_Version.ipynb
07_Synthetic_Data_Generation_and_LangSmith/: Synthetic_Data_Generation_RAGAS_&_LangSmith_Assignment.ipynb
13_Advanced_Retrieval/: .gitignore  Advanced_Retrieval_with_LangChain_Assignment.ipynb  pyproject.toml  results.txt
14_Open_DeepResearch/: open-deep-research.ipynb
homework/: hw_assignment_1.docx
midterm/: .gitattributes  .gitignore  Dockerfile  README.md  requirements.txt
midterm/requirements/: dev.txt
midterm/src/embedding/: model.py
midterm/src/evaluation/: evaluate_rag.py  ragas_eval.py
midterm/src/rag/: vectorstore.py
midterm/src/ui/: app.py
midterm/tests/: test_rag.py
